overflow issue

--- a/src/pages/wellbeing.module.css
+++ b/src/pages/wellbeing.module.css
@@ -17,8 +17,8 @@
 }
 
 @media (max-width: 900px) {
-  .wellbeingHtml {
-    overflow: unset;
+  main {
+    overflow: auto;
   }
   
 }
